RESOLVED FIXED27554
getComputedStyle does not contain a value for text-overflow
https://bugs.webkit.org/show_bug.cgi?id=27554
Summary getComputedStyle does not contain a value for text-overflow
Jessie Berlin
Reported 2009-07-22 12:38:38 PDT
CSSPropertyTextOverFlow is currently listed as unimplemented in in \WebCore\css\CSSComputedStyleDeclaration.cpp, and is not visible in the object returned by getComputedStyle object or (consequently) in the Web Inspector.
Attachments
Patch to expose the value of text-overflow on the computedStyle object. (7.95 KB, patch)
2009-07-23 12:33 PDT, Jessie Berlin
mitz: review+
Jessie Berlin
Comment 1 2009-07-23 12:33:49 PDT
Created attachment 33353 [details] Patch to expose the value of text-overflow on the computedStyle object.
Jessie Berlin
Comment 2 2009-07-23 14:04:59 PDT
mitz
Comment 3 2009-09-15 20:09:59 PDT
Note You need to log in before you can comment on or make changes to this bug.