2009-07-23  Jessie Berlin  <jberlin@apple.com>

https://bugs.webkit.org/show_bug.cgi?id=27554
        Expose the value of text-overflow in getComputedStyle.

        Reviewed by Dan Bernstein.

        Test: fast/css/getComputedStyle/getComputedStyle-text-overflow.html

        * css/CSSComputedStyleDeclaration.cpp:
        (WebCore::):
        Add text-overflow to the list of computedProperties.
        (WebCore::CSSComputedStyleDeclaration::getPropertyCSSValue):
        Return the value of the text-overflow property.

        * fast/css/getComputedStyle/getComputedStyle-text-overflow-expected.txt: Added.
        * fast/css/getComputedStyle/getComputedStyle-text-overflow.html: Added.


Canonical link: https://commits.webkit.org/37898@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@46285 268f45cc-cd09-0410-ab3c-d52691b4dbfc